<resources>
    <string name="app_name">WordMemorizer</string>
    <string name="add_button">Add button</string>
    <string name="remember_button">Remember button</string>
    <string name="forgot_button">Forgot button</string>
    <string name="kanji_word">Kanji word</string>
    <string name="hiragana_word">Hiragana word</string>
    <string name="definition">Definition</string>
    <string name="add_word">Add Word</string>
    <string name="forgot">Forgot</string>
    <string name="hide">Hide</string>
    <string name="reload">reload</string>
    <string name="different">Different</string>
    <string name="dialog_text">We found similar words. \nPlease select the same word if any</string>
    <string name="word">Word</string>
    <string name="addWord_noSimilarWords">You have no similar words to this word</string>
    <string name="furigana">Furigana</string>
    <string name="toolbar_title">Memorizer</string>
    <string name="header_title">categoryWithInfo list</string>
    <string name="header_text">set your categories</string>
    <string name="add_category">Add Category</string>
    <string name="categoryWithInfo">Category</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="remember_count">Remember Count</string>
    <string name="created_time">Created Time</string>
    <string name="random">Random</string>
    <string name="delete_word">Delete word</string>
    <string name="update_word">Update word</string>
    <string name="editing">editing</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="draw_word">Draw word</string>
    <string name="reset">Reset</string>
    <string name="reset_drawing">Reset drawing</string>
    <string name="your_character_here">your character here</string>
    <string name="fade_visibility">Fade visibility</string>
    <string name="search_word_in_jisho">Search word in Jisho</string>
    <string name="sort">sort</string>
    <string name="reset_word_count">Reset word count</string>
    <string name="toast_display">Toast display</string>
    <string name="long_press_to_edit">Long-press to edit</string>
    <string name="close_floating_bubble">Close floating bubble</string>
    <string name="hide_floating_bubble">Hide floating bubble</string>
    <string name="turn_off">Turn off</string>
    <string name="tap_to_add_word">Tap to add word</string>
    <string name="tap_here_to_open_the_add_dialog">Tap here to open the add dialog</string>
    <string name="please_wait_while_backup_is_running">Please wait while backup is running</string>

    <string name="preference_floating_bubble_key">SETTINGS_PREFERENCE_FLOATING_BUBBLE_KEY</string>
    <string name="preference_offline_translation_key">SETTINGS_PREFERENCE_OFFLINE_TRANSLATION_KEY</string>
    <string name="preference_draw_character_key">SETTINGS_PREFERENCE_DRAW_CHARACTER_KEY</string>
    <string name="reset_forgot_count">Reset forgot count</string>
    <string name="select_all">Select all</string>
    <string name="unselect_all">Unselect all</string>
    <string name="category_label">Category label</string>
    <string name="filter">Filter</string>
    <string name="apply">Apply</string>
    <string name="start_flashcards">Start flashcards</string>
    <string name="desc_optional">Description</string>
    <string name="category_name">Name</string>
    <string name="optional">Optional</string>
    <string name="required">Required</string>
    <string name="sort_word">Sort word</string>
    <string name="please_select_your_categories">Please select your categories</string>
    <string name="show_answer">Show Answer</string>
    <string name="_0">0</string>
    <string name="SETTINGS_PREFERENCE_RESET_REMEMBER_COUNT_KEY">SETTINGS_PREFERENCE_RESET_REMEMBER_COUNT_KEY</string>
    <string name="add1">+1</string>
    <string name="subtract1">-1</string>
    <string name="jisho_search">Jisho search</string>
    <string name="translate">Translate</string>
</resources>