<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="?attr/colorSurface"
    >

    <EditText
        android:id="@+id/dialog_kanji_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:hint="@string/kanji_word"
        android:importantForAutofill="no"
        android:inputType="text" />
    <EditText
        android:id="@+id/dialog_hiragana_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:hint="@string/hiragana_word"
        android:importantForAutofill="no"
        android:inputType="text" />
    <EditText
        android:id="@+id/dialog_definition_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:hint="@string/definition"
        android:importantForAutofill="no"
        android:inputType="text" />
    <Button
        android:id="@+id/dialog_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_gravity="end"
        android:text="@string/add_word"/>
</LinearLayout>