<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/fragmentMainBottom_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:paddingHorizontal="8dp"
        android:gravity="center"
        android:text="@string/categoryWithInfo"
        style="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/fragmentMainBottom_unselectAll_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/unselect_all"
        style="@style/Widget.Material3.Button.TextButton"
        app:layout_constraintTop_toBottomOf="@id/fragmentMainBottom_title_tv"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/fragmentMainBottom_selectAll_btn"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/select_all"
        style="@style/Widget.Material3.Button.TextButton"
        app:layout_constraintTop_toBottomOf="@id/fragmentMainBottom_title_tv"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/fragmentMainBottom_rv"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toBottomOf="@id/fragmentMainBottom_unselectAll_btn"
        android:paddingBottom="100dp"
        android:clipToPadding="false"
        tools:listitem="@layout/item_drawer_category"
        tools:itemCount="3"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragmentMainBottom_sort_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.Button.TonalButton"
        android:text="@string/sort_word"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragmentMainBottom_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:icon="@drawable/ic_baseline_add_24"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:text="@string/add_category"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>