<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_addCategory_name_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_addCategory_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/category_name"
            android:importantForAutofill="no"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialog_addCategory_desc_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        app:helperTextEnabled="true"
        app:helperText="@string/optional"
        app:endIconMode="clear_text"
        app:layout_constraintTop_toBottomOf="@id/dialog_addCategory_name_til"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_addCategory_desc_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/desc_optional"
            android:importantForAutofill="no"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/dialog_addCategory_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="4dp"
        android:text="@string/add_category"
        app:layout_constraintTop_toBottomOf="@id/dialog_addCategory_desc_til"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>