<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentHome_fcv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fragmentHome_flashCards_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_flashcards"
        android:src="@drawable/baseline_play_arrow_24"
        style="?attr/floatingActionButtonSmallStyle"
        app:layout_constraintBottom_toTopOf="@id/fragmentHome_add_fab"
        app:layout_constraintEnd_toEndOf="@id/fragmentHome_add_fab"
        android:contentDescription="@string/start_flashcards" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fragmentHome_add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:contentDescription="@string/add_button"
        android:text="@string/add_word"
        app:icon="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>