<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.Material3.Dark"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_background"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/dialog_addWord_fl"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="24dp"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardElevation="0dp"
        app:contentPadding="0dp"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dialog_similarWord_rv"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginVertical="4dp"
            android:paddingBottom="50dp"
            android:clipToPadding="false"
            tools:listitem="@layout/item_add_word" />

        <TextView
            android:id="@+id/dialog_similarWord_tv"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginVertical="4dp"
            android:gravity="center"
            android:text="@string/addWord_noSimilarWords" />

    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/dialog_addWord_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/word"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/dialog_addWord_fl" />

    <EditText
        android:id="@+id/dialog_addFurigana_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:hint="@string/furigana"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/dialog_addWord_et" />

    <EditText
        android:id="@+id/dialog_addDefinition_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="4dp"
        android:hint="@string/definition"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/dialog_addFurigana_et" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/dialog_addCategory_progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/dialog_addDefinition_et"
        />

    <HorizontalScrollView
        android:id="@+id/dialog_addCategory_recommendationScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dialog_addCategory_progressIndicator">

        <LinearLayout
            android:id="@+id/dialog_addCategory_recommendationLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" />

    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/dialog_addCategory_categoryScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/dialog_addCategory_recommendationScrollView">

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/dialog_addCategory_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </HorizontalScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_cancel_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="8dp"
        android:text="@string/cancel"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_addCategory_categoryScrollView" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_addWord_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="8dp"
        android:text="@string/add_word"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_addCategory_categoryScrollView" />


</androidx.constraintlayout.widget.ConstraintLayout>