<?xml version="1.0" encoding="utf-8"?>
<com.sawelo.wordmemorizer.view.DialogWindowScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:clipToPadding="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/windowDraw_drawingWord"
            android:layout_width="0dp"
            android:layout_height="28dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="16dp"
            android:text="@string/your_character_here"
            android:textColor="?colorAccent"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@id/windowDraw_reset_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/windowDraw_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:background="?colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/windowDraw_drawingWord" />

        <ImageButton
            android:id="@+id/windowDraw_reset_btn"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="16dp"
            android:contentDescription="@string/reset_drawing"
            android:src="@drawable/baseline_backspace_24"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/windowDraw_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.sawelo.wordmemorizer.view.DrawingView
            android:id="@+id/windowDraw_drawingView"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            app:layout_constraintTop_toTopOf="@id/windowDraw_line" />

        <HorizontalScrollView
            android:id="@+id/windowDraw_recommendationScrollView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="6dp"
            app:layout_constraintBottom_toTopOf="@id/windowDraw_cancel_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:id="@+id/windowDraw_recommendationLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />

        </HorizontalScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/windowDraw_cancel_btn"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/windowDraw_ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.sawelo.wordmemorizer.view.DialogWindowScrollView>